# hal-ti

./: .clang-tidy  .clangd  .gitignore  .gitlab-ci.yml  .ls-lint.yml  .mega-linter.yml  .trivyignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  NOTICE  README.md  release-please-config.json
.claude/agents/: executor.md  orchestrator.md  planner.md  reviewer.md  settings.json  settings.local.json
.claude/agents/hooks/: caveman-activate.js
.claude/hooks/: caveman-config.js  caveman-mode-tracker.js  caveman-stats.js  caveman-statusline.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: add-or-update-hal-driver.md
.github/agents/: executor.agent.md  orchestrator.agent.md  planner.agent.md  reviewer.agent.md
.github/instructions/: hal-ti-cpp.instructions.md
.github/matchers/: gcc-problem-matcher.json
.github/prompts/: orchestrate.prompt.md
.github/workflows/: ci.yml  linting-formatting.yml  release-please.yml  security.yml  social-interaction.yml  update-emil-git-tag.yml
.gitlab/: build.yml  linting-formatting.yml
boot_demo_can/: .ccsproject  .cproject  .project  boot_demo1_ccs.cmd  boot_demo_can.c
doc/: EK-TM4C123GXL.md
examples/: CMakeLists.txt
examples/blink/: CMakeLists.txt  Main.cpp
examples/freertos/: CMakeLists.txt  Main.cpp
examples/freertos/config/: FreeRTOSConfig.h
examples/terminal_and_peripherals/: CMakeLists.txt  Main.cpp
examples/terminal_uart_with_dma/: CMakeLists.txt  Main.cpp
hal_tiva/: CMakeLists.txt
hal_tiva/cortex/: CMakeLists.txt  DataWatchpointAndTrace.cpp  DataWatchpointAndTrace.hpp  EventDispatcherCortex.cpp  EventDispatcherCortex.hpp  InterruptCortex.cpp  InterruptCortex.hpp  Reset.cpp  Reset.hpp  SystemTick.cpp  SystemTick.hpp  SystemTickTimerService.cpp  SystemTickTimerService.hpp  TimeKeeper.cpp  TimeKeeper.hpp
hal_tiva/default_init/: Atomic.cpp  CMakeLists.txt  DefaultInit.cpp
hal_tiva/instantiations/: CMakeLists.txt  EventInfrastructure.cpp  EventInfrastructure.hpp  LaunchPadBspEkTm4c123g.hpp  LaunchPadBspEkTm4c1294.hpp  TracerInfrastructure.cpp  TracerInfrastructure.hpp  TracingReset.cpp  TracingReset.hpp
hal_tiva/instantiations/lwip/: CMakeLists.txt  Ethernet.hpp  EthernetSmiObserver.cpp  EthernetSmiObserver.hpp
hal_tiva/synchronous_tiva/: CMakeLists.txt  SynchronousAdc.cpp  SynchronousAdc.hpp  SynchronousAnalogComparator.cpp  SynchronousAnalogComparator.hpp  SynchronousPwm.cpp  SynchronousPwm.hpp  SynchronousQuadratureEncoder.cpp  SynchronousQuadratureEncoder.hpp  SynchronousSpiMaster.cpp  SynchronousSpiMaster.hpp  SynchronousUart.cpp  SynchronousUart.hpp
hal_tiva/tiva/: Adc.cpp  Adc.hpp  AnalogComparator.cpp  AnalogComparator.hpp  CMakeLists.txt  Can.cpp  Can.hpp  ClockTm4c123.cpp  ClockTm4c123.hpp  ClockTm4c129.cpp  ClockTm4c129.hpp  Dma.cpp  Dma.hpp  Eeprom.cpp  Eeprom.hpp  Ethernet.cpp  Ethernet.hpp  Gpio.cpp  Gpio.hpp  PinoutTableDefaultTm4c123.cpp  PinoutTableDefaultTm4c123.hpp  PinoutTableDefaultTm4c129.cpp  Pwm.cpp  Pwm.hpp  QuadratureEncoder.cpp  QuadratureEncoder.hpp  SpiMaster.cpp  SpiMaster.hpp  Uart.cpp  Uart.hpp  UartBase.cpp  UartBase.hpp  UartWithDma.cpp  UartWithDma.hpp  UniqueDeviceId.cpp  UniqueDeviceId.hpp
integration_test/test/: CMakeLists.txt  Test.cpp
tiva/: CMakeLists.txt  hal_driver.cmake
tiva/CMSIS/Core/Include/: cmsis_armcc.h  cmsis_armclang.h  cmsis_gcc.h
tiva/CMSIS/Device/TI/TM4C123/Include/: TIVA.h  TM4C1230C3PM.h  TM4C1230D5PM.h  TM4C1230E6PM.h  TM4C1230H6PM.h  TM4C1231C3PM.h  TM4C1231D5PM.h  TM4C1231D5PZ.h  TM4C1231E6PM.h  TM4C1231E6PZ.h  TM4C1231H6PGE.h  TM4C1231H6PM.h  TM4C1231H6PZ.h  TM4C1232C3PM.h  TM4C1232D5PM.h  TM4C1232E6PM.h  TM4C1232H6PM.h  TM4C1233C3PM.h  TM4C1233D5PM.h  TM4C1233D5PZ.h  TM4C1233E6PM.h  TM4C1233E6PZ.h  TM4C1233H6PGE.h  TM4C1233H6PM.h  TM4C1233H6PZ.h  TM4C1236D5PM.h  TM4C1236E6PM.h  TM4C1236H6PM.h  TM4C1237D5PM.h  TM4C1237D5PZ.h  TM4C1237E6PM.h  TM4C1237E6PZ.h  TM4C1237H6PGE.h  TM4C1237H6PM.h  TM4C1237H6PZ.h  TM4C123AE6PM.h  TM4C123AH6PM.h  TM4C123BE6PM.h  TM4C123BE6PZ.h  TM4C123BH6PGE.h  (+12 more)
tiva/CMSIS/Device/TI/TM4C123/Source/Templates/: system_TM4C123.c
tiva/CMSIS/Device/TI/TM4C123/Source/Templates/gcc/: startup_TM4C123.c
tiva/CMSIS/Device/TI/TM4C129/Include/: TIVA.h  TM4C1294NCPDT.h
tiva/CMSIS/Device/TI/TM4C129/Source/Templates/: system_TM4C129.c
tiva/CMSIS/Device/TI/TM4C129/Source/Templates/gcc/: startup_TM4C129.c
tiva/ldscripts/: mem_tm4c123gh6pm.ld  mem_tm4c1294ncpdt.ld  sections.ld
